updated desktop view to fix spacing and fixed imported fonts.

--- a/partials/_globals.scss
+++ b/partials/_globals.scss
@@ -194,6 +194,11 @@ footer {
 		font-size: .875rem;
 		line-height: 1.375rem;
 	}
+
+	@include desktop{
+		font-size: 1rem;
+		line-height: 1.5rem;
+	}
 }
 
 .footer-copy {
@@ -215,7 +220,7 @@ footer {
 
 		@include tablet {
 			order: 1;
-			width: 33%;
+			width: 40%;
 		}
 	}
 
@@ -300,330 +305,3 @@ footer {
 .no-bottom-margin {
 	margin-bottom: 0;
 }
-/*
-.body-img {
-	height: 50%;
-	width: 100%;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-.hero-bio {
-	position: relative;
-}
-.header {
-	position: absolute;
-	top: 40%;
-	left: 10%;
-	padding-left: 10px;
-	padding-right: 20px;
-	font-size: 60px;
-	color: white;
-	font-family: AvenirBold;
-	font-weight: 700;
-	line-height: 60px;
-}
-.body-copy {
-	top: 40%;
-	left: 10%;
-	padding-right: 20px;
-	font-size: 14px;
-	color: rgb(0, 0, 0);
-	font-family: AvenirR;
-	font-weight: 400;
-	line-height: 22px;
-}
-
-
-.section-header {
-	top: 40%;
-	left: 10%;
-	padding-top: 48px;
-	padding-bottom: 36px;
-	padding-left: 10%;
-	font-size: 36px;
-	line-height: 44px;
-	color: rgb(0, 0, 0);
-	font-family: AvenirR;
-	font-weight: 700;
-}
-.sub-header {
-	padding-top: 48px;
-	padding-bottom: 26px;
-	font-size: 24px;
-	line-height: 32px;
-	color: rgb(0, 0, 0);
-	font-family: AvenirR;
-	font-weight: 600;
-}
-.body {
-	font-size: 18px;
-	padding-bottom: 26px;
-	line-height: 32px;
-	color: rgb(0, 0, 0);
-	font-family: AvenirBold;
-	font-weight: 600;
-}
-.footer-header {
-	padding-bottom: 13px;
-	font-size: 34px;
-	line-height: 32px;
-	color: rgb(255, 255, 255);
-	font-family: AvenirR;
-	font-weight: 600;
-}
-.fit {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 70%;
-	height: fit-content;
-}
-.fit1 {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 80%;
-	height: fit-content;
-	padding-bottom: 28px;
-}
-.band-img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%;
-	height: fit-content;
-	height: 40%;
-}
-.copyright {
-	padding: 0.3em 1em;
-	background-color: #323232;
-	padding: 0.3em 1em;
-	background-color: #0d1765;
-	p {
-		font-size: 0.9em;
-		text-align: right;
-		font-size: 0.9em;
-		text-align: right;
-	}
-}
-.footer-menu {
-	float: left;
-	margin-top: 10px;
-	float: left;
-	margin-top: 10px;
-	a {
-		color: #cfd2d6;
-		padding: 6px;
-		text-decoration: none;
-		color: #cfd2d6;
-		padding: 6px;
-		text-decoration: none;
-		&:hover {
-			color: #27bcda;
-			color: #27bcda;
-		}
-	}
-}
-.container {
-	width: 100%;
-	height: fit-content;
-	display: flex;
-	justify-content: center;
-	background-color: transparent;
-}
-.outer {
-	padding: 12px;
-}
-.card {
-	width: 300px;
-	height: 150px;
-	position: relative;
-	background-color: #fdfdfd;
-	box-shadow: rgba(100, 100, 111, 0.145) 0px 7px 29px 0px;
-	box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-}
-.part {
-	width: 400px;
-	height: 150px;
-	position: relative;
-	background-color: #fdfdfd;
-	box-shadow: rgba(100, 100, 111, 0.145) 0px 7px 29px 0px;
-	box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-}
-.img-bg {
-	width: 100%;
-	height: 100%;
-	background-color: #706c6c;
-	background-size: cover;
-}
-.line {
-	width: 100%;
-	height: 10%;
-	border-bottom-right-radius: 5px;
-	border-bottom-left-radius: 5px;
-}
-
-#opacity_div {
-	display: block;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: rgba(192, 29, 29, 0.5);
-	z-index: 2;
-	cursor: pointer;
-	opacity: 0.5;
-}
-.container1 {
-	height: fit-content;
-	background-color: #fff;
-}
-.card2 {
-	height: auto;
-	max-width: 400px;
-	display: inline-block;
-	vertical-align: middle;
-	margin: auto 10px auto auto;
-	transition: .5s;
-	font-family: mosk;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 25px;
-	text-align: justify;
-	p {
-		margin-top: 10px;
-	}
-}
-.recommendations {
-	background-color: #FAFAFA;
-	padding-bottom: 28px;
-}
-footer {
-	background-color: #323232;
-	color: #a7a7a7;
-	font-size: 16px;
-	* {
-		font-family: "Poppins", sans-serif;
-		box-sizing: border-box;
-		border: none;
-		outline: none;
-	}
-}
-.row {
-	padding: 1em 1em;
-}
-.row.primary {
-	display: grid;
-	padding-top: 48px;
-	grid-template-columns: .53fr 1.3fr 1.3fr 1.3fr 1fr .2fr;
-	align-items: unset;
-}
-.column {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	padding: 0 2em;
-	min-height: 15em;
-}
-h3 {
-	width: 100%;
-	text-align: left;
-	color: white;
-	font-size: 1.4em;
-	white-space: nowrap;
-}
-ul {
-	list-style: none;
-	display: flex;
-	flex-direction: column;
-	padding: 0;
-	margin: 0;
-	li {
-		a {
-			color: #a7a7a7;
-			text-decoration: none;
-			&:hover {
-				color: #2a8ded;
-			}
-		}
-	}
-}
-li {
-	&:not(:first-child) {
-		margin-top: 0.8em;
-	}
-}
-.about {
-	p {
-		text-align: justify;
-		line-height: 2;
-		margin: 0;
-	}
-}
-input {
-	font-size: 1em;
-	padding: 1em;
-	width: 100%;
-	border-radius: 5px;
-	margin-bottom: 5px;
-}
-button {
-	font-size: 1em;
-	padding: 1em;
-	width: 100%;
-	border-radius: 5px;
-	margin-bottom: 5px;
-	background-color: #c7940a;
-	color: #ffffff;
-}
-div.social {
-	display: flex;
-	justify-content: space-around;
-	font-size: 2.4em;
-	flex-direction: row;
-	margin-top: 0.5em;
-}
-.social {
-	i {
-		color: #0a58d6;
-	}
-}
-.icons {
-	display: flex;
-}
-.icon {
-	padding: 4px;
-	text-decoration: none;
-	color: #FFFFFF;
-	font-size: 34px;
-	margin: 2px;
-	width: 42px;
-	height: 42px;
-}
-.name {
-	font-family: AvenirPro;
-	font-size: 27px;
-}
-.xp {
-	margin-top: 27px;
-}
-.tital {
-	position: absolute;
-	top: 40%;
-	left: 10%;
-	padding-left: 10px;
-	padding-right: 20px;
-	font-size: 60px;
-	color: white;
-	font-family: AvenirBold;
-	font-weight: 700;
-	line-height: 60px;
-}
-.nav {
-	display: flex;
-    padding: 1.3em;
-    height: 41px;
-    width: 100%;
-    background-color: #323232;
-    position: relative;
-}
-*/
