--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -14,26 +14,3 @@
     }
   }
 
-@mixin mobile {
-    @media screen and (mix-width: $mobile-breakpoint) {
-        .container {
-            display: block;
-          }
-        
-          .card {
-            margin: 0 auto 20px;
-            width: 320px;
-            height: 450px;
-            border-radius: 5px;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-          }
-        
-          .sec {
-            transform: translateX(0%);
-          }
-
-          .hero-text {
-            font-size: 30px;
-          }
-    }
-  }
