--- a/partials/_typography.scss
+++ b/partials/_typography.scss
@@ -2,15 +2,15 @@
 
 @font-face {
     font-family: 'AvenirBold';
-    src: url('../assets/fonts/AvenirNextLTPro-Bold.otf') format("opentype") ;
+    src: url('../assets/Font/AvenirNextLTPro-Bold.otf') format("opentype") ;
   }
   @font-face {
     font-family: 'AvenirRegular';
-    src: url('../assets/fonts/AvenirNextLTPro-Regular.otf') format("opentype");
+    src: url('/assets/Font/AvenirNextLTPro-Regular.otf') format("opentype");
   }
   @font-face {
     font-family: 'AvenirDemi';
-    src: url('../assets/fonts/Alternative-files/AvenirNextLTPro.ttf') format("truetype");
+    src: url('../assets/Font/AvenirNextLTPro-Demi.otf') format("opentype");
   }
 
   
